--- a/apache.yml
+++ b/apache.yml
@@ -1,18 +1,15 @@
 ---
-- name: install and start apache
-  hosts: centos
-  sudo: true
-  sudo_user: root
-
+- hosts: app
   tasks:
-  - name: install httpd
-    yum: name=httpd state=present
+   - name: Ensure httpd is installed
+     yum: name=httpd state=installed
+   - name: Ensure httpd is running and enabled on boot
+     service: name=httpd state=running enabled=yes
+   - name: Copying index.html
+     copy: src=/root/index.html dest=/var/www/html/index.html mode=777 owner=apache group=apache
+   - name: Apache | add apache iptable rule
+     copy: src=/root/iptables dest=/etc/sysconfig
+   - name: restart iptables
+     service: name=iptables state=restarted
 
-  - name: start httpd
-    service: name=httpd state=running
-  
-  - name: enable on boot
-    service: name=httpd enabled=yes
-  
-  - name: Copy Index file to web directory
-    copy: src=/root/index.html dest=/var/www/html/ mode=755
+~                                               
